--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -7,9 +7,10 @@ dependencies = [
     "pandas~=2.0",
     "pyarrow~=16.1",
     "python-dotenv~=1.0",
-    "ray[data,default]~=2.31.0",
+    "ray[data,default]~=2.33.0", 
     "tqdm~=4.64",
     "pyarrow-stubs~=10.0",
+    "matplotlib~=3.9"
 ]
 
 [build-system]
