--- a/src/ray-runtime-env.yml
+++ b/src/ray-runtime-env.yml
@@ -12,6 +12,7 @@ py_modules:
 pip:
   - python-dotenv~=1.0
   - matplotlib~=3.9
+  - nltk~=3.9
   # - transformers~=4.44
   # - torch~=2.4
 logging_level: debug
