--- a/src/ray-runtime-env.yml
+++ b/src/ray-runtime-env.yml
@@ -13,7 +13,7 @@ pip:
   - python-dotenv~=1.0
   - matplotlib~=3.9
   - nltk~=3.9
-  # - transformers~=4.44
-  # - torch~=2.4
+  - transformers~=4.44
+  - torch~=2.4
 logging_level: debug
 
