minimal changes try_classifier

--- a/src/ray-runtime-env.yml
+++ b/src/ray-runtime-env.yml
@@ -14,6 +14,7 @@ pip:
   - matplotlib~=3.9
   - nltk~=3.9
   - transformers~=4.44
+  # - transformers~=4.12.3 # für orcas-I bert classifier
   - torch~=2.4
 logging_level: debug
 
