--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
     "fasttext-wheel~=0.9",
     # "fasttext~=0.9.3", # installation funktioniert nicht
     "huggingface-hub~=0.24",
+    # "transformers~=4.12.3", # für orcas-I bert classifier
     "transformers~=4.44",
     "torch~=2.4",
     "nltk~=3.9"
