--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -32,7 +32,10 @@ dependencies = [
     "transformers~=4.44",
     "torch~=2.4",
     "nltk~=3.9",
-    "safetensors~=0.4.5"
+    "safetensors~=0.4.5",
+    "spacy~=3.7.2",
+    # "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
+    "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl"
 ]
 
 [build-system]
