--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -3,45 +3,29 @@ name = "thesis-schneg"
 requires-python = "~=3.10"
 version = "0.0.0"
 
-#dependencies prod
-# dependencies = [ 
-#     "jupyter~=1.0",
-#     "pandas~=2.0",
-#     "pyarrow~=16.1",
-#     "python-dotenv~=1.0",
-#     "ray[data,default]~=2.33.0", 
-#     "tqdm~=4.64",
-#     "pyarrow-stubs~=10.0",
-#     "matplotlib~=3.9"
-# ]
-
-#dependencies test
 dependencies = [
+    "cyclopts~=2.9",
+    # "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
+    "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl",
+    "fasttext-wheel~=0.9",
+    "huggingface-hub~=0.24",
     "jupyter~=1.0",
+    "matplotlib~=3.9",
+    "nltk~=3.9",
     "pandas~=2.0",
     "pyarrow~=16.1",
     "python-dotenv~=1.0",
-    "ray[data,default]~=2.33.0", 
+    "ray[data,default]~=2.33",
+    "safetensors~=0.4.5",
+    "spacy~=3.7",
+    "torch~=2.4",
     "tqdm~=4.64",
-    "pyarrow-stubs~=10.0",
-    "matplotlib~=3.9",
-    "fasttext-wheel~=0.9",
-    # "fasttext~=0.9.3", # installation funktioniert nicht
-    "huggingface-hub~=0.24",
     # "transformers~=4.12.3", # für orcas-I bert classifier
     "transformers~=4.44",
-    "torch~=2.4",
-    "nltk~=3.9",
-    "safetensors~=0.4.5",
-    "spacy~=3.7.2",
-    # "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
-    "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl"
 ]
 
 [build-system]
-requires = [
-    "setuptools~=69.0",   
-]
+requires = ["setuptools~=69.0"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools.packages.find]
@@ -52,5 +36,3 @@ exclude = [
     "data",
     "venv_test"
 ]
-
-# [tool.setuptools_scm]
