--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -31,6 +31,7 @@ dependencies = [
     # "transformers~=4.12.3", # für orcas-I bert classifier
     "transformers~=4.44",
     "SciencePlots~=2.1",
+    "gliner~=0.2",
 ]
 
 [build-system]
