--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "cyclopts~=2.9",
     # "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
     "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl",
+    # "xx_ent_wiki_sm @ https://github.com/explosion/spacy-models/releases/download/xx_ent_wiki_sm-3.8.0/xx_ent_wiki_sm-3.8.0-py3-none-any.whl",
     "fasttext-wheel~=0.9",
     "huggingface-hub~=0.24",
     "jupyter~=1.0",
@@ -33,6 +34,8 @@ dependencies = [
     "SciencePlots~=2.1",
     "gliner~=0.2",
     "presidio-analyzer~=2.2.3",
+    "scipy~=1.15",
+    "scikit-learn~=1.6",
 ]
 
 [build-system]
