--- a/src/ray-runtime-env.yml
+++ b/src/ray-runtime-env.yml
@@ -13,6 +13,7 @@ pip:
   - cyclopts~=2.9
   # - en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl
   - en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
+  # - xx_ent_wiki_sm @ https://github.com/explosion/spacy-models/releases/download/xx_ent_wiki_sm-3.8.0/xx_ent_wiki_sm-3.8.0-py3-none-any.whl
   - fasttext-wheel~=0.9
   # - huggingface-hub~=0.24
   # - jupyter~=1.0
@@ -22,11 +23,11 @@ pip:
   - pyarrow~=16.1
   - python-dotenv~=1.0
   - ray[data,default]~=2.33
-  - safetensors~=0.4.5
-  - spacy~=3.7
+  # - safetensors~=0.4.5
+  - spacy~=3.7 #3.7
   - torch~=2.4
   - tqdm~=4.64
   - transformers~=4.44
   - gliner~=0.2
-  - presidio-analyzer~=2.2.3
+  - presidio-analyzer~=2.2
 logging_level: debug
