--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -6,8 +6,9 @@ version = "0.0.0"
 dependencies = [
     "bandit[toml]~=1.7",
     "cyclopts~=2.9",
-    # "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
-    "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl",
+    "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
+    "en_core_web_lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl",
+    # "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl",
     # "xx_ent_wiki_sm @ https://github.com/explosion/spacy-models/releases/download/xx_ent_wiki_sm-3.8.0/xx_ent_wiki_sm-3.8.0-py3-none-any.whl",
     "fasttext-wheel~=0.9",
     "huggingface-hub~=0.24",
@@ -37,10 +38,13 @@ dependencies = [
     "scipy~=1.15",
     "scikit-learn~=1.6",
     "pytrends~=4.9",
+    "sentence-transformers~=3.4",
+    "tirex-tracker~=0.2",
+    "numpy~=1.2",
 ]
 
 [build-system]
-requires = ["setuptools~=69.0"]
+requires = ["setuptools~=78.0"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools.packages.find]
