src: read multiple datasets added

--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -6,8 +6,8 @@ version = "0.0.0"
 dependencies = [
     "bandit[toml]~=1.7",
     "cyclopts~=2.9",
-    "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
-    "en_core_web_lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl",
+    # "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
+    # "en_core_web_lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl",
     # "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl",
     # "xx_ent_wiki_sm @ https://github.com/explosion/spacy-models/releases/download/xx_ent_wiki_sm-3.8.0/xx_ent_wiki_sm-3.8.0-py3-none-any.whl",
     "fasttext-wheel~=0.9",
@@ -41,6 +41,7 @@ dependencies = [
     "sentence-transformers~=3.4",
     "tirex-tracker~=0.2",
     "numpy~=1.2",
+    "seaborn~=0.12",
 ]
 
 [build-system]
