--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -42,7 +42,7 @@ dependencies = [
     "seaborn~=0.12",
     "datasketch~=1.6",
     "ott-jax[neural]~=0.6",
-    "jax~=0.6"
+    "jax~=0.6",
 ]
 
 [build-system]
