reorganized custom data types (analysisName)

--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -28,7 +28,7 @@ dependencies = [
     "safetensors~=0.4.5",
     "spacy~=3.7",
     "torch~=2.4",
-    # "transformers~=4.12.3", # für orcas-I bert classifier
+    # "transformers~=4.12.3", # for orcas-I bert classifier
     "transformers~=4.44",
     "SciencePlots~=2.1",
     "gliner~=0.2",
